--- a/package.json
+++ b/package.json
@@ -26,18 +26,16 @@
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.0",
+    "zone.js": "~0.11.3",
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
-    "@types/jasmine": "~3.6.0",
+    "typescript": "~4.1.2",
+    "@angular-devkit/build-angular": "~0.1102.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
-  }
+    "tslint": "~6.1.0"
+  },
+  "devDependencies": {}
 }
