--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy/proxy.prod.conf.js",
+    "start": "ng serve --port $PORT",
     "start:dev": "ng serve --proxy-config proxy/proxy.dev.conf.js",
     "build": "ng build --prod",
     "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1102.0",
     "@angular/animations": "~11.2.0",
     "@angular/cdk": "^11.2.7",
+    "@angular/cli": "~11.2.0",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
+    "@angular/compiler-cli": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.0",
@@ -22,20 +25,18 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ngxs/store": "^3.7.1",
-    "jwt-decode": "^3.1.2",
-    "ngx-infinite-scroll": "^10.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular/cli": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
-    "typescript": "~4.1.2",
-    "@angular-devkit/build-angular": "~0.1102.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
+    "ngx-infinite-scroll": "^10.0.1",
     "protractor": "~7.0.0",
+    "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.2",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {}
 }
