--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve dist/frontend",
+    "start": "node server.js",
     "build": "ng build --prod",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
