--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ngxs/store": "^3.7.1",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
     "ngx-infinite-scroll": "^10.0.1",
@@ -35,7 +35,8 @@
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "@types/node": "^12.20.7"
   },
   "devDependencies": {}
 }
