--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "lint": "ng lint"
   },
@@ -24,9 +24,11 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ngxs/store": "^3.7.1",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "jwt-decode": "^3.1.2",
     "ngx-infinite-scroll": "^10.0.1",
     "protractor": "~7.0.0",
@@ -35,8 +37,8 @@
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2",
-    "zone.js": "~0.11.3",
-    "@types/node": "^12.20.7"
+    "url": "^0.11.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {}
 }
